Fix horizontal overflow on narrow viewports

--- a/components/contact/contact-shapes.less
+++ b/components/contact/contact-shapes.less
@@ -4,7 +4,7 @@
 	.shape-triangle-1 {
 		position: absolute;
 		top: -120px;
-		left: 81%;
+		left: 71%;
 		width: auto;
 		max-width: 100%;
 		height: 100px;
